# prime_radiant

./: .gitignore  README.md  marimo.toml  pyproject.toml  start-lab.sh
.github/workflows/: ci.yml
notebooks/: interactive_demo.py
src/prime_radiant/: __init__.py
src/prime_radiant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
